--- a/app/src/main/res/layout/empty_list_view.xml
+++ b/app/src/main/res/layout/empty_list_view.xml
@@ -5,14 +5,14 @@
     android:layout_height="match_parent">
     
     <ListView
-        android:id="@+id/list"
+        android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
     </ListView>
 
     <LinearLayout
-        android:id="@+id/empty"
+        android:id="@android:id/empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
